--- a/OCR and Translate/OCR_and_Translate.entitlements
+++ b/OCR and Translate/OCR_and_Translate.entitlements
@@ -4,9 +4,13 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
-	<key>com.apple.security.temporary-exception.mach-register.global-name</key>
-	<string>com.apple.screencapture.interactive</string>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
+	<key>com.apple.security.network.server</key>
+	<true/>
+	<key>com.apple.security.temporary-exception.mach-register.global-name</key>
+	<string>com.apple.screencapture.interactive</string>
 </dict>
 </plist>
