--- a/OCR and Translate/OCR_and_Translate.entitlements
+++ b/OCR and Translate/OCR_and_Translate.entitlements
@@ -4,6 +4,8 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.application-groups</key>
+	<array/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
 	<key>com.apple.security.network.client</key>
@@ -11,6 +13,8 @@
 	<key>com.apple.security.network.server</key>
 	<true/>
 	<key>com.apple.security.temporary-exception.mach-register.global-name</key>
-	<string>com.apple.screencapture.interactive</string>
+	<array>
+		<string>com.apple.screencapture.interactive</string>
+	</array>
 </dict>
 </plist>
